// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result Component renders correctly  1`] = `
.emotion-0 {
  outline: none;
  padding: 1.5rem 1rem;
  color: white;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
  font-size: 1rem;
}

<li
  className="emotion-0"
  onClick={[Function]}
>
  Apple Inc
   (
  aapl
  )
</li>
`;

exports[`Search Results Component renders correctly with Results passed into it 1`] = `
.emotion-2 {
  list-style-type: none;
  padding-left: 0;
  z-index: 1;
  position: absolute;
  margin: 0.7rem 0;
  width: calc(100% - 2 * 1.5rem);
}

.emotion-0 {
  outline: none;
  padding: 1.5rem 1rem;
  color: white;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
  font-size: 1rem;
}

<ul
  className="emotion-2"
>
  <li
    className="emotion-0"
    onClick={[Function]}
  >
    Apple Inc
     (
    aapl
    )
  </li>
  <li
    className="emotion-0"
    onClick={[Function]}
  >
    Alphabet Inc
     (
    googl
    )
  </li>
</ul>
`;

exports[`Search Results Component renders correctly with empty result passed to it 1`] = `
.emotion-0 {
  list-style-type: none;
  padding-left: 0;
  z-index: 1;
  position: absolute;
  margin: 0.7rem 0;
  width: calc(100% - 2 * 1.5rem);
}

<ul
  className="emotion-0"
/>
`;
